Import of NYARLA/Acme-GodoWord-0.00002 from CPAN.
gitpan-cpan-distribution: Acme-GodoWord
gitpan-cpan-version:      0.00002
gitpan-cpan-path:         NYARLA/Acme-GodoWord-0.00002.tar.gz
gitpan-cpan-author:       NYARLA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Acme::GodoWord
 
-0.01    Mon Apr 19 11:14:22 2010
-        - original version
+0.00002     Mon Apr 19 13:23:40 2010
+            - fix mistake in POD
+
+0.00001     Mon Apr 19 11:14:22 2010
+            - original version
